--- a/src/styles/dynamic.css
+++ b/src/styles/dynamic.css
@@ -2,21 +2,22 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgb(232, 230, 230);
     position: relative;
     padding: 1rem;
 }
 
 .drag{
     cursor: grab;
-    padding: 0.5rem;
-}
-.drag:hover{
-    background-color: gray;
+    position: absolute;
+    top:0;
+    left:-0.2rem;
+    
 }
 .hidden{
     visibility:hidden;
 }
+
 .flex-row{
     display: flex;
     flex-direction: row;
@@ -28,3 +29,33 @@
 .row-gap{
     gap:0.4rem;
 }
+.align-center{
+    align-items: center;
+}
+.justify-center{
+    justify-content: center;
+}
+.align-baseline{
+    align-items: baseline;
+}
+.p1{
+    color: rgb(163, 0, 0);
+    background-color: rgb(225, 77, 77);
+}
+.circle-container{
+    height: 1.1rem;
+    width: 1.1rem;
+    border-radius: 100%;
+}
+.checked-circle{
+    color: white;
+
+    background-color: rgb(2, 152, 2);
+}
+.circle-container:hover{
+    cursor: pointer;
+}
+.project-header{
+    padding: 0.3rem;
+}
+
