--- a/src/styles/dynamic.css
+++ b/src/styles/dynamic.css
@@ -41,9 +41,30 @@
 .align-baseline{
     align-items: baseline;
 }
+.justify-baseline{
+    justify-content: baseline;
+}
+.space-between{
+    justify-content: space-between;
+}
 .p1{
-    color: rgb(163, 0, 0);
-    background-color: rgb(225, 77, 77);
+    color: var(--p1-color);
+    background-color: var(--p1-back);
+ 
+}
+.p2{
+    color: var(--p2-color);
+    background-color: var(--p2-back);
+
+}
+.p3{
+    color: var(--p3-color);
+    background-color: var(--p3-back);
+}
+.p4{
+    color: var(--p4-color);
+    background-color: var(--p4-back);
+
 }
 .circle-container{
     height: 1.1rem;
@@ -52,8 +73,8 @@
 }
 .checked-circle{
     color: white;
-
-    background-color: rgb(2, 152, 2);
+    padding: 0.2rem;
+    
 }
 .circle-container:hover{
     cursor: pointer;
@@ -103,4 +124,54 @@
 .collapsed{
     display: none;
 }
+
+.add-btn-lst{
+    width: 100%;
+    height: 1.5rem;
+    display: flex;
+    cursor: pointer;
+    border: none;
+    align-items: center;
+    gap: 0.5rem;
+    justify-content: baseline;
+    background-color: white;
+    border-radius: 3px;
+}
+.add-btn-lst:hover{
+    background-color: #e5e2e2;
+}
+.dark-orange-back{
+    background-color: var(--dark-orange);
+}
+.dark-orange-color{
+    color: var(--dark-orange);
+}
+
+
+
+.hidden{
+    display: none;
+}
+
+.add-task{
+    display: flex;
+    flex-direction: column;
+}
+
+.gray-border-bottom{
+    border-bottom: 1px solid rgb(232, 230, 230) ;
+}
+.rel-pos{
+    position: relative;
+}
+.modal{
+    z-index: 2;
+    position: absolute;
+}
+.crossed{
+    text-decoration: line-through;
+    
+}
+
+
 
