--- a/src/styles/dynamic.css
+++ b/src/styles/dynamic.css
@@ -172,6 +172,43 @@
     text-decoration: line-through;
     
 }
+.date-btn{
+    min-width: 4rem;
+    
 
+}
+.priority-btn{
+    min-width: 6rem;
+    
+}
+.date-btn, select{
+    background-color: white;
+    color: var(--p4-color);
+    border: 1px solid var(--p4-color);
+    border-radius: 6px;
+}
+.date-btn:hover, select:hover{
+    background-color: #f2eeee;
+    cursor: pointer;
+}
+select,
+::picker(select) {
+  appearance: base-select;
+}
 
+select::picker-icon {
+  color: #999999;
+  transition: 0.4s rotate;
+}
+select:open::picker-icon {
+  rotate: 180deg;
+}
+::picker(select){
+    border: 1px solid rgb(232, 227, 227);
+    border-radius: 4px;
+    box-shadow: 1px 0px rgb(182, 180, 180);
+}
 
+option{
+    padding: 0.2rem;
+}
