--- a/src/styles/main-page.css
+++ b/src/styles/main-page.css
@@ -26,19 +26,29 @@ body{
     display: flex;
     width: 100%;
     height: 100%;
+    background-color: #fbf6f3;
     
 }
 nav{
     height: 100vh;
     flex-basis: 20%;
-    background-color: #fcfaf8;
+    background-color: #f5f2ef;
     padding: 1.5rem;
+    border-radius: 12px;
+    margin-left: 2em;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    
 }
 main{
     height: 100vh;
     padding: 1.5rem;
     background-color: white;
     flex-basis: 80%;
+    border-radius: 12px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+main,nav{
+    margin:2em;
 }
 .nav-item{
     display: flex;
@@ -50,7 +60,7 @@ main{
     padding: 0.3rem;
 }
 .nav-item:hover{
-    background-color: #f1eeee;
+    background-color: #dadada;
     cursor: pointer;
 }
 .nav-item:active{
